# long-term-localization

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
config/: best_long_term_slam_params.yaml  long_term_relocalization_params.yaml  rs80_laser_angles.csv
include/long_term_relocalization/depth_clustering/: depth_clustering_utils.h
include/long_term_relocalization/offline_process/: semantic_kitti_utils.h
include/long_term_relocalization/recognizers/: graph_utilities.h  incremental_geometric_consistency_recognizer.h
include/long_term_relocalization/relocalization/: cluster_manager.h  relocalization.h  serialize.h
include/long_term_relocalization/utils/: common.h  constants.h  params_loader.h
rviz/: mapping.rviz  relocalization.rviz
scripts/: shuffle_file.py
sh/: offline_process.sh  record.sh
src/common/: CMakeLists.txt  README.md  package.xml
src/common/include/common/: fixed_array2d.h  log_out.h  tic_toc.h
src/common/include/common/file/: csv_reader.h  file_path.h  yaml_reader.h
src/common/include/common/math/: math.h
src/common/include/common/pcl_utils/: pcl_types.h  pcl_utils.h
src/common/include/common/ros_utils/: bag_writer.h  ros_publisher.h  ros_utils.h  tf_transform_broadcaster.h
src/common/src/file/: csv_reader.cc  file_path.cc  yaml_reader.cc
src/common/src/pcl_utils/: pcl_utils.cc
src/common/src/ros_utils/: ros_utils.cc  tf_transform_broadcaster.cc
src/common/test/: fixed_array2d_test.cc
src/depth_clustering/: depth_clustering.h  depth_clustering_main.cc  depth_clustering_utils.cc  depth_clustering_utils.h  ground_plane_fitter.h  range_image_constructor.h
src/long_term_relocalization/: CMakeLists.txt
src/long_term_relocalization/config/: long_term_relocalization_params.yaml
src/long_term_relocalization/include/long_term_relocalization/depth_clustering/: depth_clustering.h  ground_plane_fitter.h  range_image_constructor.h
src/long_term_relocalization/include/long_term_relocalization/recognizers/: correspondence_recognizer.h  correspondence_recognizer_factory.h  geometric_consistency_recognizer.h  graph_based_geometric_consistency_recognizer.h  graph_utilities.h  incremental_geometric_consistency_recognizer.h  matches_partitioner.h  partitioned_geometric_consistency_recognizer.h
src/long_term_relocalization/include/long_term_relocalization/relocalization/: cluster.h  cluster_matcher.h  keyframe.h  semantic_cluster_map.h
src/long_term_relocalization/include/long_term_relocalization/utils/: params_types.h  pose_saver.h  utils.h
src/long_term_relocalization/launch/: mapping.launch  relocalization.launch
src/long_term_relocalization/scripts/: save_cluster_map
src/long_term_relocalization/src/evalute/: p99_plot.py  reserve_clusters_plot.py
src/long_term_relocalization/src/offline_process/: semantic_kitti_utils.cc
src/long_term_relocalization/src/recognizers/: correspondence_recognizer_factory.cc  geometric_consistency_recognizer.cc  graph_based_geometric_consistency_recognizer.cc  incremental_geometric_consistency_recognizer.cc  partitioned_geometric_consistency_recognizer.cc
src/long_term_relocalization/src/relocalization/: cluster_manager.cc  relocalization_main.cc  semantic_cluster_map.cc
src/long_term_relocalization/src/reserve-mapping/: dynamic_voxel_grid.cc  kdtree_points_neighbors_provider.h
src/long_term_relocalization/src/utils/: params_loader.cc
src/offline_process/: semantic_bag_writer_main.cc
src/other_pkgs/glow/: CMakeLists.txt  LICENSE  README.md  package.xml
src/other_pkgs/glow/cmake/: GenCppFile.cmake  GlowShaderCompilation.cmake
src/other_pkgs/glow/src/glow/: GlBuffer.h  GlCapabilities.cpp  GlCapabilities.h  GlColor.cpp  GlColor.h  GlColorMap.h  GlFramebuffer.cpp  GlFramebuffer.h  GlObject.h  GlPixelFormat.h  GlProgram.cpp  GlProgram.h  GlQuery.cpp  GlQuery.h  GlRenderbuffer.cpp  GlRenderbuffer.h  GlSampler.cpp  GlSampler.h  GlShader.cpp  GlShader.h  GlShaderCache.cpp  GlShaderCache.h  GlState.cpp  GlState.h  GlTexture.cpp  GlTexture.h  GlTextureBuffer.cpp  GlTextureBuffer.h  GlTextureFormat.h  GlTextureRectangle.cpp  GlTextureRectangle.h  GlTransformFeedback.cpp  GlTransformFeedback.h  GlUniform.cpp  GlUniform.h  GlVertexArray.cpp  GlVertexArray.h  ScopedBinder.h  colormaps.h  glbase.h  (+4 more)
src/other_pkgs/glow/src/glow/util/: FpsCamera.cpp  FpsCamera.h  GlCamera.cpp  GlCamera.h  RandomColorGenerator.cpp  RandomColorGenerator.h  RoSeCamera.cpp  RoSeCamera.h  X11OffscreenContext.cpp  X11OffscreenContext.h  enum_utils.h
src/other_pkgs/glow/test/: CMakeLists.txt  buffer-test.cpp  camera-test.cpp  color-test.cpp  framebuffer-test.cpp  main.cpp  test_utils.h  texture-test.cpp
src/other_pkgs/lidar-bonnetal/: .gitignore
src/other_pkgs/lidar-bonnetal/train/: requirements.txt
src/other_pkgs/point_labeler/: CMakeLists.txt
src/other_pkgs/point_labeler/assets/: settings.cfg
src/recognizers/: correspondence_recognizer.h  correspondence_recognizer_factory.cc  correspondence_recognizer_factory.h  geometric_consistency_recognizer.cc  geometric_consistency_recognizer.h  graph_based_geometric_consistency_recognizer.cc  graph_based_geometric_consistency_recognizer.h  incremental_geometric_consistency_recognizer.cc  incremental_geometric_consistency_recognizer.h  partitioned_geometric_consistency_recognizer.cc  partitioned_geometric_consistency_recognizer.h
src/relocalization/: cluster.cc  cluster.h  cluster_manager.cc  cluster_manager.h  cluster_matcher.cc  cluster_matcher.h  keyframe.h  relocalization.cc  relocalization.h  relocalization_main.cc  semantic_cluster_map.cc  semantic_cluster_map.h  serialize.h
src/reserve-mapping/: dynamic_voxel_grid.h  ground_octo_map.cc  ground_octo_map.h  kdtree_points_neighbors_provider.cc  kdtree_points_neighbors_provider.h  keyframe_updater.cc  keyframe_updater.h  local_map.h  point_cloud_map_generator.cc  preprocessor.cc  preprocessor.h  semantic_eucidean_clustering.cc  semantic_eucidean_clustering.h  semantic_octomap_generator.cc  semantic_octomap_generator.h
src/utils/: params_loader.cc  pose_saver.cc  utils.cc
(+10 files in other folders)
