<?xml version="1.0"?>
<package format="2">
  <name>long_term_relocalization</name>
  <version>0.0.0</version>
  <description>The long_term_relocalization package</description>

  <maintainer email="lisilin013@163.com">lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>opencv3_catkin</depend>
  <depend>pcl_catkin</depend>
  <depend>gtsam_catkin</depend>
  <depend>minkindr</depend>
  <depend>minkindr_gtsam</depend>
  <depend>minkindr_conversions</depend>
  <depend>common</depend>

</package>
